made some changes to header to correct fitting on mobile device. Was bleeding over in size.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ header {
   padding: 20px;
   padding-top: 0px;
   color: hsl(206, 17%, 28%);
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .card {
